Revert "Transferring Repo."
This reverts commit 57330d9d77e13c4e4436647df8981ae3b12a2a91.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-**/credentials.json
-**/.vscode
-**/.DS_Store
-**/.idea
+*/credentials.json
+./credentials.json
+*/.vscode
+*/.DS_Store/
+.DS_Store/
+./.DS_Store/
+*/.DS_Store
+./.DS_Store
+A3/Part_B/.DS_Store
+A3/Part_C/.DS_Store
